# database-update

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  commands.rs  condenser.rs  docker.rs  error.rs  extractor.rs  fk_graph.rs  lib.rs  main.rs  parser.rs  progress.rs  s3.rs  scanner.rs  scheduler.rs  templates.rs
src/components/: CascadeUncheckModal.tsx  ComboBox.tsx  DatabaseConfig.tsx  Layout.tsx  ProgressBar.tsx  Sidebar.tsx  TableRow.tsx  Tooltip.tsx
src/hooks/: useProgress.ts  useTauriCommand.ts  useTemplates.ts
src/pages/: Configure.tsx  Execute.tsx  Home.tsx  S3Download.tsx  Scanning.tsx  Schedules.tsx  Settings.tsx  Templates.tsx
src/styles/: globals.css
src/types/: index.ts
